--- a/hero_stat.ipynb
+++ b/hero_stat.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "source": [
-    "# Stat-Win Correlation analysis: Hero stat\n",
+    "# Stat-Win Classification analysis: Hero stat\n",
     "\n",
     "> by Imt of NYXL (imt@andbox.com)"
    ],
